--- a/contact-us.html
+++ b/contact-us.html
@@ -7,52 +7,11 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script defer src="header.js"></script>
+  <script defer src="footer.js"></script>
 </head>
 <body>
-  <!-- Hamburger Menu Button -->
-  <div class="hamburger-menu">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-  </div>
-
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <div class="sidebar-header">
-      <h3>Stream Nexus</h3>
-      <div class="close-btn">&times;</div>
-    </div>
-    <ul class="sidebar-menu">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="how-to-use.html">How to Use</a></li>
-      <li><a href="how-it-works.html">How It Works</a></li>
-      <li><a href="why-streamnexus.html">Why Stream Nexus</a></li>
-      <li><a href="our-team.html">Our Team</a></li>
-      <li><a href="skills-to-learn.html">Skills to Learn</a></li>
-      <li><a href="career-paths.html">Career Paths</a></li>
-      <li><a href="mailto:support@streamnexus.com" class="help-link">Help</a></li>
-    </ul>
-  </div>
-
-  <!-- Overlay for sidebar -->
-  <div class="overlay"></div>
-
-  <!-- Main Content -->
-  <div class="container">
-    <!-- Top Navigation Bar -->
-    <nav class="navbar">
-      <div class="logo-container">
-        <img src="/placeholder.svg?height=60&width=180" alt="Stream Nexus Logo" class="logo">
-      </div>
-      <div class="college-logo-container">
-        <img src="/placeholder.svg?height=60&width=180" alt="College Logo" class="college-logo">
-      </div>
-      <div class="profile-container">
-        <div class="profile-icon">
-          <i class="fas fa-user-circle"></i>
-        </div>
-      </div>
-    </nav>
+  <div id="header-container"></div>
 
     <!-- Contact Us Content -->
     <div class="page-content">
@@ -140,67 +99,7 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="privacy-policy.html">Privacy Policy</a></li>
-            <li><a href="terms-of-service.html">Terms of Service</a></li>
-            <li><a href="contact-us.html">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Our Team</h3>
-          <ul>
-            <li><a href="https://linkedin.com" target="_blank">Alex Johnson</a></li>
-            <li><a href="https://linkedin.com" target="_blank">Sarah Chen</a></li>
-            <li><a href="https://linkedin.com" target="_blank">Michael Rodriguez</a></li>
-            <li><a href="https://linkedin.com" target="_blank">Priya Patel</a></li>
-            <li><a href="https://linkedin.com" target="_blank">David Kim</a></li>
-            <li><a href="https://linkedin.com" target="_blank">Emma Wilson</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Connect With Us</h3>
-          <div class="social-icons">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2023 Stream Nexus. All rights reserved.</p>
-      </div>
-    </footer>
-  </div>
-
-  <!-- Login Modal -->
-  <div class="login-modal">
-    <div class="login-modal-content">
-      <span class="close-login-modal">&times;</span>
-      <h2>Login to Stream Nexus</h2>
-      <form class="login-form">
-        <div class="form-group">
-          <label for="username">Username/Email</label>
-          <input type="text" id="username" name="username" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit" class="login-btn">Login</button>
-        <div class="login-links">
-          <a href="#" class="forgot-password">Forgot Password?</a>
-          <a href="#" class="signup-link">New User? Sign Up</a>
-        </div>
-      </form>
-    </div>
-  </div>
+  <div id="footer-container"></div>
 
   <script src="script.js"></script>
 </body>
