--- a/index.html
+++ b/index.html
@@ -7,50 +7,11 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script defer src="header.js"></script>
+  <script defer src="footer.js"></script>
 </head>
 <body>
-  <!-- Hamburger Menu Button -->
-  <div class="hamburger-menu">
-    <div class="bar"></div>
-    <div class="bar"></div>
-    <div class="bar"></div>
-  </div>
-
-  <!-- Sidebar -->
-  <div class="sidebar">
-    <div class="sidebar-header">
-      <h3>Stream Nexus</h3>
-      <div class="close-btn">&times;</div>
-    </div>
-    <ul class="sidebar-menu">
-      <li><a href="index.html" class="active">Home</a></li>
-      <li><a href="how-to-use.html">How to Use</a></li>
-      <li><a href="how-it-works.html">How It Works</a></li>
-      <li><a href="why-streamnexus.html">Why Stream Nexus</a></li>
-      <li><a href="our-team.html">Our Team</a></li>
-      <li><a href="mailto:support@streamnexus.com" class="help-link">Help</a></li>
-    </ul>
-  </div>
-
-  <!-- Overlay for sidebar -->
-  <div class="overlay"></div>
-
-  <!-- Main Content -->
-  <div class="container">
-    <!-- Top Navigation Bar -->
-    <nav class="navbar">
-      <div class="logo-container">
-        <img src="/placeholder.svg?height=60&width=180" alt="Stream Nexus Logo" class="logo">
-      </div>
-      <div class="college-logo-container">
-        <img src="/placeholder.svg?height=60&width=180" alt="College Logo" class="college-logo">
-      </div>
-      <div class="profile-container">
-        <div class="profile-icon">
-          <i class="fas fa-user-circle"></i>
-        </div>
-      </div>
-    </nav>
+  <div id="header-container"></div>
 
     <!-- Landing Page Content -->
     <div class="landing-page">
@@ -154,33 +115,7 @@
       </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="footer">
-      <div class="footer-content">
-        <div class="footer-section">
-          <h3>Quick Links</h3>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">Privacy Policy</a></li>
-            <li><a href="#">Terms of Service</a></li>
-            <li><a href="#">Contact Us</a></li>
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h3>Connect With Us</h3>
-          <div class="social-icons">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-instagram"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="footer-bottom">
-        <p>&copy; 2023 Stream Nexus. All rights reserved.</p>
-      </div>
-    </footer>
-  </div>
+  <div id="footer-container"></div>
 
   <script src="script.js"></script>
 </body>
