--- a/our-team.html
+++ b/our-team.html
@@ -7,10 +7,12 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script defer src="header.js"></script>
+  <script defer src="footer.js"></script>
 </head>
 <body>
-  <div id="header"></div>
-
+  <div id="header-container"></div>
+  
     <!-- Our Team Content -->
     <div class="page-content">
       <h1 class="page-title">Meet Our Team</h1>
@@ -88,23 +90,8 @@
       </div>
     </div>
     
-  <div id="footer"></div>
+  <div id="footer-container"></div>
   <script src="script.js"></script>
-  <script>
-  function loadComponent(id, file) {
-    fetch(file)
-      .then(response => response.text())
-      .then(data => {
-        document.getElementById(id).innerHTML = data;
-      })
-      .catch(error => console.error("Error loading component:", error));
-  }
-
-  window.onload = function () {
-    loadComponent("header", "header.html");
-    loadComponent("footer", "footer.html");
-  };
-</script>
 </body>
 </html>
 
