--- a/index.html
+++ b/index.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stream Nexus - Live Classroom Streaming</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script defer src="header.js"></script>
-  <script defer src="footer.js"></script>
-</head>
-<body>
-  <div id="header-container"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Stream Nexus - Live Classroom Streaming</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script defer src="header.js"></script>
+    <script defer src="footer.js"></script>
+  </head>
+  <body>
+    <div id="header-container"></div>
 
     <!-- Landing Page Content -->
     <div class="landing-page">
@@ -19,18 +22,30 @@
         <div class="landing-text">
           <h1>Welcome to Stream Nexus</h1>
           <h2>Revolutionizing Classroom Learning</h2>
-          <p>Imagine a world where education has no boundaries. With StreamNexus, lecturers can seamlessly live-stream their classes to multiple classrooms, ensuring that every student receives the same high-quality learning experience—no matter where they are.</p>
-          <p class="goal"><i class="fas fa-rocket"></i> <strong>Our Goal:</strong> To bridge the gap between physical and digital learning, making education more accessible, interactive, and efficient.</p>
+          <p>
+            Imagine a world where education has no boundaries. With StreamNexus,
+            lecturers can seamlessly live-stream their classes to multiple
+            classrooms, ensuring that every student receives the same
+            high-quality learning experience—no matter where they are.
+          </p>
+          <p class="goal">
+            <i class="fas fa-rocket"></i> <strong>Our Goal:</strong> To bridge
+            the gap between physical and digital learning, making education more
+            accessible, interactive, and efficient.
+          </p>
           <button class="get-started-btn">Get Started</button>
         </div>
         <div class="landing-image">
-          <img src="/placeholder.svg?height=400&width=500" alt="Live Streaming Illustration">
+          <img
+            src="/placeholder.svg?height=400&width=500"
+            alt="Live Streaming Illustration"
+          />
         </div>
       </div>
     </div>
 
     <!-- Dashboard Content (Initially Hidden) -->
-    <div class="dashboard">
+    <div class="dashboard" style="display: none">
       <h2>Streaming Dashboard</h2>
       <div class="cards-container">
         <div class="card" id="start-streaming">
@@ -109,15 +124,17 @@
         <div class="modal-content">
           <span class="close-modal">&times;</span>
           <h3>Join a Stream</h3>
-          <input type="text" id="class-code-input" placeholder="Enter class code">
+          <input
+            type="text"
+            id="class-code-input"
+            placeholder="Enter class code"
+          />
           <button id="join-class-btn">Join</button>
         </div>
       </div>
     </div>
 
-  <div id="footer-container"></div>
-
-  <script src="script.js"></script>
-</body>
+    <div id="footer-container"></div>
+    <script src="script.js"></script>
+  </body>
 </html>
-
