Branding colors changed

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stream Nexus - Live Classroom Streaming</title>
+    <title>STREAMNEXUS - Live Classroom Streaming</title>
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
@@ -20,7 +20,7 @@
     <div class="landing-page">
       <div class="landing-content">
         <div class="landing-text">
-          <h1>Welcome to Stream Nexus</h1>
+          <h1>Welcome to STREAM<span>NEXUS</span></h1>
           <h2>Revolutionizing Classroom Learning</h2>
           <p>
             Imagine a world where education has no boundaries. With StreamNexus,
