--- a/how-to-use.html
+++ b/how-to-use.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Stream Nexus - How to Use</title>
+  <title>STREAMNEXUS - How to Use</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -15,7 +15,7 @@
 
     <!-- How to Use Content -->
     <div class="page-content">
-      <h1 class="page-title">How to Use Stream Nexus</h1>
+      <h1 class="page-title">How to Use STREAM<span >NEXUS</span></h1>
       
       <div class="instruction-section">
         <div class="instruction-text">
