Fixes in Home Page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="landing-image">
           <img
-            src="/placeholder.svg?height=400&width=500"
+            src="/1.webp" width=600
             alt="Live Streaming Illustration"
           />
         </div>
@@ -48,20 +48,20 @@
     <div class="dashboard" style="display: none">
       <h2>Streaming Dashboard</h2>
       <div class="cards-container">
-        <div class="card" id="start-streaming">
+      <a href="teacher-stream.html" style="text-decoration: none;color: white;"><div class="card" id="start-streaming">
           <div class="card-icon">
             <i class="fas fa-video"></i>
           </div>
           <h3>Start Streaming</h3>
           <p>Host a new class</p>
-        </div>
-        <div class="card" id="join-stream">
+        </div></a>
+        <a href="student-stream.html"style="text-decoration: none;color: white;"><div class="card" id="join-stream">
           <div class="card-icon">
             <i class="fas fa-sign-in-alt"></i>
           </div>
           <h3>Join Stream</h3>
           <p>Enter a class code</p>
-        </div>
+        </div></a>
         <div class="card" id="view-recordings">
           <div class="card-icon">
             <i class="fas fa-play-circle"></i>
