--- a/career-paths.html
+++ b/career-paths.html
@@ -119,7 +119,7 @@
       const careerData = {
         "higher-studies": {
           title: "Higher Studies",
-          image: "/placeholder.svg?height=200&width=500&text=Higher+Studies",
+          image: "./img/higher.jpg",
           what: "Pursuing advanced degrees in computer science or related fields after completing a bachelor's degree. This includes Master's programs (M.Tech, MS), doctoral programs (Ph.D.), or specialized business degrees (MBA) with a technology focus.",
           why: "Higher studies allow for specialization in cutting-edge areas, research opportunities, academic career paths, and often lead to higher-paying positions. They also provide networking opportunities with experts in the field and can be a pathway to international careers.",
           features: [
@@ -147,7 +147,7 @@
         "software-dev": {
           title: "Software Development",
           image:
-            "/placeholder.svg?height=200&width=500&text=Software+Development",
+            "./img/software-development.jpg",
           what: "Software development involves designing, coding, testing, and maintaining computer programs and applications that run on various platforms including desktop, mobile, web, and embedded systems.",
           why: "Software development offers creative problem-solving opportunities, competitive salaries, flexible work arrangements, and the chance to build products used by millions. It's a field with continuous learning and growth potential.",
           features: [
@@ -175,7 +175,7 @@
         },
         "data-science": {
           title: "Data Science",
-          image: "/placeholder.svg?height=200&width=500&text=Data+Science",
+          image: "./img/data-science.jpg",
           what: "Data Science combines domain expertise, programming skills, and knowledge of mathematics and statistics to extract meaningful insights from data. It involves collecting, processing, analyzing, and interpreting large datasets to inform decision-making.",
           why: "Data Science offers the opportunity to solve complex problems, drive business decisions with data, work across various industries, and command competitive salaries. It's at the intersection of statistics, computer science, and domain expertise.",
           features: [
@@ -204,7 +204,7 @@
         },
         cloud: {
           title: "Cloud Computing",
-          image: "/placeholder.svg?height=200&width=500&text=Cloud+Computing",
+          image: "./img/cloud-computing.jpg",
           what: "Cloud Computing professionals design, implement, and manage cloud-based systems and services. They work with platforms like AWS, Azure, and Google Cloud to create scalable, reliable, and cost-effective infrastructure solutions.",
           why: "Cloud Computing offers exposure to cutting-edge technologies, high demand across industries, competitive compensation, and the opportunity to work on large-scale distributed systems that power modern applications.",
           features: [
@@ -232,7 +232,7 @@
         },
         cybersecurity: {
           title: "Cybersecurity",
-          image: "/placeholder.svg?height=200&width=500&text=Cybersecurity",
+          image: "./img/cyber.webp",
           what: "Cybersecurity professionals protect systems, networks, and programs from digital attacks. They design and implement security measures, monitor for breaches, respond to incidents, and develop security policies and procedures.",
           why: "Cybersecurity offers the chance to protect critical infrastructure, constantly evolve with new challenges, work across all industries, and enjoy excellent job security and compensation. It's a field where you can make a significant impact on organizational safety.",
           features: [
@@ -261,7 +261,7 @@
         "ai-ml": {
           title: "AI & Machine Learning",
           image:
-            "/placeholder.svg?height=200&width=500&text=AI+and+Machine+Learning",
+            "./img/ai-ml.jpg",
           what: "AI and Machine Learning professionals develop systems that can learn from and make decisions based on data. They design, implement, and deploy algorithms and models that enable computers to perform tasks that typically require human intelligence.",
           why: "AI & ML offers the opportunity to work on cutting-edge technology, solve complex problems with significant impact, command premium salaries, and shape the future of how machines and humans interact across virtually all industries.",
           features: [
@@ -290,7 +290,7 @@
         devops: {
           title: "DevOps Engineering",
           image:
-            "/placeholder.svg?height=200&width=500&text=DevOps+Engineering",
+            "./img/devops.jpg",
           what: "DevOps Engineers bridge the gap between software development and IT operations. They implement practices, tools, and methodologies that improve an organization's ability to deliver applications and services at high velocity.",
           why: "DevOps offers exposure to both development and operations, the opportunity to improve efficiency and productivity, competitive compensation, and the satisfaction of solving complex infrastructure and deployment challenges.",
           features: [
@@ -319,7 +319,7 @@
         product: {
           title: "Product Management",
           image:
-            "/placeholder.svg?height=200&width=500&text=Product+Management",
+            "./img/product.jpg",
           what: "Product Managers guide the development of products from conception to launch and beyond. They define product vision, gather requirements, prioritize features, and work with cross-functional teams to deliver products that meet user needs and business objectives.",
           why: "Product Management offers the opportunity to shape products used by thousands or millions, work at the intersection of technology and business, develop a diverse skill set, and have significant impact on company success.",
           features: [
@@ -348,7 +348,7 @@
         systems: {
           title: "Systems Architecture",
           image:
-            "/placeholder.svg?height=200&width=500&text=Systems+Architecture",
+            "./img/systems-architecture.jpg",
           what: "Systems Architects design and oversee the implementation of complex computing systems. They define the structure, components, modules, interfaces, and data for systems to satisfy specified requirements and ensure they work together effectively.",
           why: "Systems Architecture offers the opportunity to design large-scale systems, solve complex technical challenges, influence technical direction, and work at a high level of abstraction while still maintaining technical depth.",
           features: [
@@ -376,7 +376,7 @@
         },
         iot: {
           title: "IoT Development",
-          image: "/placeholder.svg?height=200&width=500&text=IoT+Development",
+          image: "./img/iot.jpg",
           what: "IoT (Internet of Things) Development involves creating systems where physical devices connect to the internet and each other, collecting and sharing data. IoT developers work on hardware interfaces, connectivity, data processing, and applications that utilize connected devices.",
           why: "IoT Development offers the opportunity to work at the intersection of hardware and software, create tangible products that interact with the physical world, and be part of a rapidly growing field with applications across numerous industries.",
           features: [
@@ -405,7 +405,7 @@
         blockchain: {
           title: "Blockchain Development",
           image:
-            "/placeholder.svg?height=200&width=500&text=Blockchain+Development",
+            "./img/blockchain.jpg",
           what: "Blockchain Development involves creating decentralized applications and systems using blockchain technology. Blockchain developers design, implement, and maintain blockchain protocols, smart contracts, and applications that leverage distributed ledger technology.",
           why: "Blockchain Development offers the opportunity to work on cutting-edge technology, contribute to potentially transformative applications in finance and beyond, and develop highly specialized skills that command premium compensation.",
           features: [
@@ -434,7 +434,7 @@
         emerging: {
           title: "Other Emerging Fields",
           image:
-            "/placeholder.svg?height=200&width=500&text=Emerging+Technologies",
+            "./img/other.jpg",
           what: "Emerging fields in technology include quantum computing, extended reality (AR/VR/MR), edge computing, autonomous systems, and other cutting-edge areas that are still evolving but show significant promise for future growth and impact.",
           why: "Working in emerging fields offers the opportunity to be at the forefront of innovation, develop highly specialized expertise, potentially shape the direction of new technologies, and position yourself for future opportunities as these fields mature.",
           features: [
