--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </div>
         <div class="landing-image">
           <img
-            src="/1.webp" width=600
+            src="./img/Homepage.webp" width=600
             alt="Live Streaming Illustration"
           />
         </div>
