--- a/skills-to-learn.html
+++ b/skills-to-learn.html
@@ -144,7 +144,7 @@
         programming: {
           title: "Programming Languages",
           image:
-            "/placeholder.svg?height=200&width=500&text=Programming+Languages",
+            "./img/programming.jpg",
           what: "Programming languages are formal languages comprising a set of instructions that produce various kinds of output. They are used in computer programming to implement algorithms.",
           learn:
             "You will learn syntax, data types, control structures, functions, object-oriented programming concepts, and how to solve problems using code.",
@@ -165,7 +165,7 @@
         dsa: {
           title: "Data Structures & Algorithms",
           image:
-            "/placeholder.svg?height=200&width=500&text=Data+Structures+and+Algorithms",
+            "./img/dsa.jpg",
           what: "Data Structures and Algorithms (DSA) is the study of organizing data in a way that enables efficient storage, retrieval, and modification, along with the step-by-step procedures for solving computational problems.",
           learn:
             "You will learn about arrays, linked lists, stacks, queues, trees, graphs, sorting algorithms, searching algorithms, dynamic programming, and algorithm analysis techniques.",
@@ -185,7 +185,7 @@
         },
         web: {
           title: "Web Development",
-          image: "/placeholder.svg?height=200&width=500&text=Web+Development",
+          image: "./img/web.jpg",
           what: "Web development is the process of building and maintaining websites and web applications. It encompasses everything from simple static web pages to complex web-based applications, social network services, and electronic business platforms.",
           learn:
             "You will learn HTML, CSS, JavaScript, front-end frameworks (React, Angular, Vue), back-end technologies (Node.js, Django, Ruby on Rails), databases, APIs, and deployment strategies.",
@@ -206,7 +206,7 @@
         database: {
           title: "Database Management",
           image:
-            "/placeholder.svg?height=200&width=500&text=Database+Management",
+            "./img/database.jpg",
           what: "Database Management involves the organization, storage, retrieval, security, and integrity of data in computer systems. It includes designing database schemas, optimizing queries, and ensuring data consistency and availability.",
           learn:
             "You will learn SQL, database design principles, normalization, indexing, transaction management, and various database systems like MySQL, PostgreSQL, MongoDB, and Redis.",
@@ -226,7 +226,7 @@
         },
         os: {
           title: "Operating Systems",
-          image: "/placeholder.svg?height=200&width=500&text=Operating+Systems",
+          image: "./img/os.jpg",
           what: "Operating Systems (OS) are software that manage computer hardware and software resources and provide common services for computer programs. They act as an intermediary between users and the computer hardware.",
           learn:
             "You will learn about process management, memory management, file systems, I/O systems, virtualization, security mechanisms, and the architecture of popular operating systems like Linux, Windows, and macOS.",
@@ -246,7 +246,7 @@
         },
         networks: {
           title: "Computer Networks",
-          image: "/placeholder.svg?height=200&width=500&text=Computer+Networks",
+          image: "./img/networks.jpg",
           what: "Computer Networks is the study of how computers and other devices communicate with each other. It involves the design, implementation, and management of networks ranging from small local networks to the global Internet.",
           learn:
             "You will learn about network protocols (TCP/IP, HTTP), network devices (routers, switches), network topologies, subnetting, routing algorithms, network security, and troubleshooting techniques.",
@@ -267,7 +267,7 @@
         software: {
           title: "Software Engineering",
           image:
-            "/placeholder.svg?height=200&width=500&text=Software+Engineering",
+            "./img/software.jpg",
           what: "Software Engineering is the systematic application of engineering approaches to the development of software. It goes beyond programming to include aspects like requirements analysis, design, testing, maintenance, and project management.",
           learn:
             "You will learn software development methodologies (Agile, Waterfall), design patterns, software architecture, testing strategies, version control, CI/CD pipelines, and project management techniques.",
@@ -287,7 +287,7 @@
         },
         cloud: {
           title: "Cloud Computing",
-          image: "/placeholder.svg?height=200&width=500&text=Cloud+Computing",
+          image: "./img/cloud.jpg",
           what: 'Cloud Computing is the delivery of computing services—including servers, storage, databases, networking, software, analytics, and intelligence—over the Internet ("the cloud") to offer faster innovation, flexible resources, and economies of scale.',
           learn:
             "You will learn about cloud service models (IaaS, PaaS, SaaS), deployment models, virtualization, containerization, cloud security, and specific cloud platforms like AWS, Azure, and Google Cloud.",
@@ -308,7 +308,7 @@
         ai: {
           title: "Artificial Intelligence",
           image:
-            "/placeholder.svg?height=200&width=500&text=Artificial+Intelligence",
+            "./img/ai.jpg",
           what: "Artificial Intelligence (AI) is the simulation of human intelligence processes by machines, especially computer systems. These processes include learning, reasoning, problem-solving, perception, and language understanding.",
           learn:
             "You will learn about machine learning algorithms, neural networks, deep learning, natural language processing, computer vision, reinforcement learning, and AI ethics.",
