--- a/skills-to-learn.html
+++ b/skills-to-learn.html
@@ -20,9 +20,7 @@
 
       <div class="department-logo">
         <img
-          src="/placeholder.svg?height=100&width=300"
-          alt="CSE Department Logo"
-        />
+          src="./img/cse-logo.png" height="150px" alt="CSE Department Logo"/>
       </div>
 
       <div class="skills-grid">
