--- a/career-paths.html
+++ b/career-paths.html
@@ -20,7 +20,7 @@
 
       <div class="department-logo">
         <img
-          src="/placeholder.svg?height=100&width=300"
+          src="./img/cse-logo.png" height="150px"
           alt="CSE Department Logo"
         />
       </div>
