--- a/our-team.html
+++ b/our-team.html
@@ -33,13 +33,13 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/uday-vamsi.jpg"
               alt="Team Member 1"
             />
           </div>
-          <h3>Alex Johnson</h3>
-          <p>Lead Developer</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
+          <h3>Uday vamsi</h3>
+          <p>Frontend Dev</p>
+          <a href="https://www.linkedin.com/in/uday-vamsi-darla-559a612b6/" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -47,13 +47,13 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/bharadwaj.png"
               alt="Team Member 2"
             />
           </div>
-          <h3>Sarah Chen</h3>
-          <p>UI/UX Designer</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
+          <h3>Bharadwaj</h3>
+          <p>Network & Research</p>
+          <a href="https://www.linkedin.com/in/bharadwaj-donthikurthi-bb8696288/" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -61,13 +61,13 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/mark.jpg"
               alt="Team Member 3"
             />
           </div>
-          <h3>Michael Rodriguez</h3>
-          <p>Backend Engineer</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
+          <h3>Mark rennie</h3>
+          <p>Database manager</p>
+          <a href="https://www.linkedin.com/in/mark-rennie-dasam-866a022b6/" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -75,13 +75,13 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/madhav.png"
               alt="Team Member 4"
             />
           </div>
-          <h3>Priya Patel</h3>
-          <p>Education Specialist</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
+          <h3>Madhav dhavala</h3>
+          <p>Backend Dev</p>
+          <a href="https://www.linkedin.com/in/madhav-dhavala-2482582a2/" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -89,13 +89,13 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/uday-shankar.jpg"
               alt="Team Member 5"
             />
           </div>
-          <h3>David Kim</h3>
-          <p>WebRTC Expert</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
+          <h3>Uday shankar</h3>
+          <p>Integration Dev</p>
+          <a href="https://www.linkedin.com/in/uday-shankar-uday-601738268/" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
           </a>
         </div>
@@ -103,11 +103,11 @@
         <div class="team-card">
           <div class="team-photo">
             <img
-              src="/placeholder.svg?height=150&width=150"
+              src="./img/ganesh.jpg"
               alt="Team Member 6"
             />
           </div>
-          <h3>Emma Wilson</h3>
+          <h3>Ganesh</h3>
           <p>Project Manager</p>
           <a href="https://linkedin.com" class="social-link" target="_blank">
             <i class="fab fa-linkedin"></i>
