Streaming dashboard changes

--- a/public/index.html
+++ b/public/index.html
@@ -52,15 +52,15 @@
           <div class="card-icon">
             <i class="fas fa-video"></i>
           </div>
-          <h3>Start Streaming</h3>
-          <p>Host a new class</p>
+          <h3>Virtual class room</h3>
+          <p>Start or Join a class</p>
         </div></a>
-        <a href="main.html"style="text-decoration: none;color: white;"><div class="card" id="join-stream">
+        <a href=""style="text-decoration: none;color: white;"><div class="card" id="join-stream">
           <div class="card-icon">
-            <i class="fas fa-sign-in-alt"></i>
+            <i class="fas fa-comments"></i>
           </div>
-          <h3>Join Stream</h3>
-          <p>Enter a class code</p>
+          <h3>Chat Box</h3>
+          <p>Ask a question in chat</p>
         </div></a>
         <div class="card" id="view-recordings">
           <div class="card-icon">
