--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
           <h3>Virtual class room</h3>
           <p>Start or Join a class</p>
         </div></a>
-        <a href=""style="text-decoration: none;color: white;"><div class="card" id="join-stream">
+        <a href="./index_chat.html"style="text-decoration: none;color: white;"><div class="card" id="join-stream">
           <div class="card-icon">
             <i class="fas fa-comments"></i>
           </div>
