Add video/audio toggle and fullscreen functionality to the live class interface

--- a/public/main.html
+++ b/public/main.html
@@ -180,7 +180,6 @@
             <div class="video-wrapper">
                 <h3>Your Camera</h3>
                 <video id="localVideo" autoplay muted playsinline></video>
-                <!--<div class="no-video" id="localNoVideo">Camera not connected</div>-->
             </div>
         </div>
         
@@ -189,13 +188,16 @@
             <div class="remote-video-wrapper">
                 <h3>Teacher's Camera</h3>
                 <video id="remoteVideo" autoplay playsinline></video>
-                <!--<div class="no-video" id="remoteNoVideo">Waiting for teacher's video...</div>-->
             </div>
         </div>
         
         <div class="controls">
-            <button id="endBtn">End Session</button>
+        <button id="endBtn">End Session</button>
+        <button id="toggleVideoBtn"><i class="fas fa-video"></i> Video</button>
+        <button id="toggleAudioBtn"><i class="fas fa-microphone"></i> Audio</button>
+        <button id="fullscreenBtn"><i class="fas fa-expand"></i> Fullscreen</button>
         </div>
+
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
