--- a/public/index_chat.html
+++ b/public/index_chat.html
@@ -5,6 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Classroom Chat</title>
+    <link rel="stylesheet" href="/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+    <script defer src="header.js"></script>
+    <script defer src="footer.js"></script>
     <style>
         /* style-chat.css */
 
@@ -378,6 +386,7 @@ button:hover {
     </style>
 </head>
 <body>
+    <div id="header-container"></div>
     <div id="login" class="login-container">
         <div class="login-box">
             <h2>Join Classroom Chat</h2>
@@ -419,7 +428,6 @@ button:hover {
             </div>
         </div>
     </div>
-
     <script src="client.js"></script>
 </body>
 </html>
