Add chat functionality and remove contact us page; update team member details

--- a/public/our-team.html
+++ b/public/our-team.html
@@ -1,122 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>STREAMNEXUS - Our Team</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script defer src="header.js"></script>
-    <script defer src="footer.js"></script>
-  </head>
-  <body>
-    <div id="header-container"></div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>STREAMNEXUS - Our Team</title>
+  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
+  <script defer src="header.js"></script>
+  <script defer src="footer.js"></script>
+</head>
 
-    <!-- Our Team Content -->
-    <div class="page-content">
-      <h1 class="page-title">Meet Our Team</h1>
+<body>
+  <div id="header-container"></div>
 
-      <div class="team-intro">
-        <p>
-          STREAM<span>NEXUS</span> was built by a
-          dedicated team of developers, designers, and educators who are
-          passionate about revolutionizing classroom learning. Meet the people
-          who made it possible.
-        </p>
+  <div class="page-content">
+    <h1 class="page-title">Meet Our Team</h1>
+
+    <div class="team-intro">
+      <p>
+        STREAM<span>NEXUS</span> was built by a
+        dedicated team of developers, designers, and educators passionate about revolutionizing classroom learning. Meet the people who made it possible.
+      </p>
+    </div>
+
+    <div class="team-grid">
+      <!-- Team Member 1 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/uday-vamsi.jpg" alt="Uday Vamsi" />
+        </div>
+        <h3>Uday Vamsi</h3>
+        <p><strong>Role:</strong> Frontend Developer</p>
+        <p><strong>Email:</strong> udaysynapses@gmail.com</p>
+        <p><strong>Phone:</strong> +91 76809 48550</p>
+        <div class="social-link">
+          <a href="https://linkedin.com/in/uday-vamsi-darla-559a612b6/" target="_blank" style="color: white;"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="social-link">
+          <a href="https://instagram.com/uday_vamsi_darla" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
+        </div>
       </div>
 
-      <div class="team-grid">
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/uday-vamsi.jpg"
-              alt="Team Member 1"
-            />
-          </div>
-          <h3>Uday vamsi</h3>
-          <p>Frontend Dev</p>
-          <a href="https://www.linkedin.com/in/uday-vamsi-darla-559a612b6/" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+      <!-- Team Member 2 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/bharadwaj.png" alt="Bharadwaj" />
         </div>
-
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/bharadwaj.png"
-              alt="Team Member 2"
-            />
-          </div>
-          <h3>Bharadwaj</h3>
-          <p>Network & Research</p>
-          <a href="https://www.linkedin.com/in/bharadwaj-donthikurthi-bb8696288/" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+        <h3>Bharadwaj</h3>
+        <p><strong>Role:</strong> Network & Research</p>
+        <p><strong>Email:</strong> bharadwaj10flasmvp@gmail.com</p>
+        <p><strong>Phone:</strong> +91 93816 09981</p>
+        <div class="social-link">
+          <a href="https://linkedin.com/in/bharadwaj-donthikurthi-bb8696288/" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
         </div>
-
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/mark.jpg"
-              alt="Team Member 3"
-            />
-          </div>
-          <h3>Mark rennie</h3>
-          <p>Database manager</p>
-          <a href="https://www.linkedin.com/in/mark-rennie-dasam-866a022b6/" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+        <div class="social-link">
+          <a href="https://instagram.com/bharadwaj_donthikurthi" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
         </div>
+      </div>
 
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/madhav.png"
-              alt="Team Member 4"
-            />
-          </div>
-          <h3>Madhav dhavala</h3>
-          <p>Backend Dev</p>
-          <a href="https://www.linkedin.com/in/madhav-dhavala-2482582a2/" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+      <!-- Team Member 3 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/mark.jpg" alt="Mark Rennie" />
         </div>
-
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/uday-shankar.jpg"
-              alt="Team Member 5"
-            />
-          </div>
-          <h3>Uday shankar</h3>
-          <p>Integration Dev</p>
-          <a href="https://www.linkedin.com/in/uday-shankar-uday-601738268/" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+        <h3>Mark Rennie</h3>
+        <p><strong>Role:</strong> Backend Developer of chat</p>
+        <p><strong>Email:</strong> rennie0407@gmail.com</p>
+        <p><strong>Phone:</strong> +91 90636 94594</p>
+        <div class="social-link">
+          <a href="https://linkedin.com/in/mark-rennie-dasam-866a022b6/" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
         </div>
+        <div class="social-link">
+          <a href="https://instagram.com/_mark_rennie" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
 
-        <div class="team-card">
-          <div class="team-photo">
-            <img
-              src="./img/ganesh.jpg"
-              alt="Team Member 6"
-            />
-          </div>
-          <h3>Ganesh</h3>
-          <p>Project Manager</p>
-          <a href="https://linkedin.com" class="social-link" target="_blank">
-            <i class="fab fa-linkedin"></i>
-          </a>
+      <!-- Team Member 4 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/madhav.png" alt="Madhav Dhavala" />
+        </div>
+        <h3>Madhav Dhavala</h3>
+        <p><strong>Role:</strong> Backend Developer of stream</p>
+        <p><strong>Email:</strong> madhavdhavala0@gmail.com</p>
+        <p><strong>Phone:</strong> +91 72071 27948</p>
+        <div class="social-link">
+          <a href="https://linkedin.com/in/madhav-dhavala-2482582a2/" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="social-link">
+          <a href="https://instagram.com/madhav_dhavala" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+
+      <!-- Team Member 5 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/uday-shankar.jpg" alt="Uday Shankar" />
+        </div>
+        <h3>Uday Shankar</h3>
+        <p><strong>Role:</strong> Integration Developer</p>
+        <p><strong>Email:</strong> obito.uday006@gmail.com</p>
+        <p><strong>Phone:</strong> +91 79953 88360</p>
+        <div class="social-link">
+          <a href="https://www.linkedin.com/in/uday-shankar-attili-987046353/" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="social-link">
+          <a href="https://instagram.com/__uday_shankar___" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
+        </div>
+      </div>
+
+      <!-- Team Member 6 -->
+      <div class="team-card">
+        <div class="team-photo">
+          <img src="./img/ganesh.jpg" alt="Ganesh" />
+        </div>
+        <h3>Ganesh</h3>
+        <p><strong>Role:</strong> Project Manager</p>
+        <p><strong>Email:</strong> boddapukrishna4@gmail.com</p>
+        <p><strong>Phone:</strong> +91 63010 54158</p>
+        <div class="social-link">
+          <a href="https://linkedin.com" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
+        </div>
+        <div class="social-link">
+          <a href="https://instagram.com/ganesh20b" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
         </div>
       </div>
     </div>
+  </div>
 
-    <div id="footer-container"></div>
-    <script src="script.js"></script>
-  </body>
+  <div id="footer-container"></div>
+  <script src="script.js"></script>
+</body>
 </html>
