--- a/public/why-streamnexus.html
+++ b/public/why-streamnexus.html
@@ -109,6 +109,12 @@
           </thead>
           <tbody>
             <tr>
+              <td>Works without internet</td>
+              <td><i class="fas fa-check"></i></td>
+              <td><i class="fas fa-times"></i></td>
+              <td><i class="fas fa-times"></i></td>
+            </tr>
+            <tr>
               <td>Designed for Education</td>
               <td><i class="fas fa-check"></i></td>
               <td><i class="fas fa-times"></i></td>
@@ -122,12 +128,6 @@
             </tr>
             <tr>
               <td>Simple Class Codes</td>
-              <td><i class="fas fa-check"></i></td>
-              <td><i class="fas fa-times"></i></td>
-              <td><i class="fas fa-times"></i></td>
-            </tr>
-            <tr>
-              <td>Integrated Notes</td>
               <td><i class="fas fa-check"></i></td>
               <td><i class="fas fa-times"></i></td>
               <td><i class="fas fa-times"></i></td>
