Update instructions in how-to-use.html; remove unused streaming and student/teacher stream pages

--- a/public/how-to-use.html
+++ b/public/how-to-use.html
@@ -32,7 +32,7 @@
         <div class="instruction-text">
           <div class="step-number">2</div>
           <h3>Choose Your Option</h3>
-          <p>Select "Start Streaming" to host a new class or "Join Stream" to enter an existing class.</p>
+          <p>Select "Start Class" to host a new class or "Join Class" to enter an existing class.</p>
         </div>
         <div class="instruction-image">
         <!--<img src="/placeholder.svg?height=300&width=400" alt="Dashboard Options Illustration">-->
