Update LinkedIn profile link for team member Ganesh B.V.

--- a/public/our-team.html
+++ b/public/our-team.html
@@ -120,7 +120,7 @@
         <p><strong>Email:</strong> boddapukrishna4@gmail.com</p>
         <p><strong>Phone:</strong> +91 63010 54158</p>
         <div class="social-link">
-          <a href="https://linkedin.com" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/ganesh-bvv-835199311" target="_blank"style="color: white;"><i class="fab fa-linkedin"></i></a>
         </div>
         <div class="social-link">
           <a href="https://instagram.com/ganesh20b" target="_blank"style="color: white;"><i class="fab fa-instagram"></i></a>
